--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.4.3",
     "element-ui": "^2.4.5",
     "vue": "^2.6.10",
+    "vue-aliyun-captcha": "^0.2.0",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
@@ -28,6 +29,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
+    "sass-resources-loader": "^2.0.1",
     "typescript": "~3.5.3",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
